# finance-demo-app

./: README.md  dev.sh  docker-compose.yml
backend/: pyproject.toml
backend/app/: db.py  main.py
backend/app/domain/auth/: routes.py  service.py
backend/app/domain/charts/: routes.py  schemas.py  service.py
backend/app/domain/common/: schemas.py
backend/app/domain/estimation/: models.py  routes.py  schemas.py  service.py
backend/app/domain/tickers/: routes.py  schemas.py  service.py
backend/app/domain/user/: models.py  routes.py  schemas.py  service.py
backend/app/middlewares/: elasticsearch_middleware.py
backend/app/utils/: formatting.py
backend/tests/: test_utils.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/: api.ts  config.ts  hooks.ts  http.ts  main.tsx  setupTests.ts  test-utils.tsx  theme.ts
frontend/src/Pages/: AnalysisPage.tsx  LoginPage.tsx  index.ts
frontend/src/components/: AppBar.tsx  EditableTable.tsx  LoginForm.tsx  Section.tsx  Subtitle.tsx  Table.tsx  TableSkeleton.tsx  Ticker.tsx  TickerSearch.tsx  UserProfile.tsx  index.ts
frontend/src/containers/: AnlystRecommedationsChart.tsx  PrivateEstimation.tsx  PublicEstimation.tsx  RevenueVsEarningsChart.tsx  TickerSummary.test.tsx  TickerSummary.tsx  index.ts
frontend/src/contexts/auth/: AuthContext.tsx  AuthProvider.tsx  index.ts  useAuth.ts
frontend/src/mocks/: handlers.ts
frontend/src/models/: EstimateType.ts  HighChart.ts  TableData.ts  TickerSummary.ts  index.ts
